flux/apps/gateway/gateway/http-to-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
spec:
  parentRefs:
    - name: main
      sectionName: http
  hostnames:
    - "*.nstnr.com" 
    - "nstnr.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
